------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

14-Feb-2010 Ian MacLennan
+ Added tests for JEvent

13-Feb-2010 Ian MacLennan
^ Removing @group breaks annotation because tests no longer break the run

10-Feb-2010 Hannes Papenberg
# Fixed sampledata in JFilterInputTests

08-Feb-2010 Hannes Papenberg
# Fixed JSimpleXML tests

30-Jan-2010 Ian MacLennan
# Fixed JFormTest::testLoad to sync with changes to trunk

27-Jan-2010 Mark Dexter
# Fix bugs in functional tests. Add back TestSuite.php.
# Add new test to test front-end sample data.

25-Jan-2010 Louis Landry
 ^ Moved testing infrastructure from the /testing/ folder into the trunk.

19-Jan-2010 Andrew Eddie
 ^ Completed tests for INI, JSON, XML and PHP registry formatters.
 ^ Completed tests for JRegistryFormat.

22-Dec-2009 Ian MacLennan
# Modified mock expect calls

20-Nov-2009 Ian MacLennan
# Added @runTestsInSeparateProcesses annotations to JUtilityTest and JAuthenticationTest so that test suite would run.

06-Nov-2009 Ed Stafford
+ Added library/joomla/error skeletons in unittest

05-Nov-2009 Ed Stafford
+ Added all library/joomla/event, library/joomla/environment skeletons in unittest.

02-Nov-2009 Ed Stafford
+ Added all library/joomla/cache, library/joomla/client, library/joomla/document, and library/joomla/database skeletons

28-Oct-2009 Ed Stafford
+ Added all library/joomla/application, library/joomla/access skeletons

27-Oct-2009 Ed Stafford
+ Added all library/joomla/base skeletons

15-Oct-2009 Ian MacLennan
+ Added JPaginationTest and JPaginationTestHelper - at this point only the constructor is done

09-Oct-2009 Ian MacLennan
+ Added test skeletons for JFactory, JFrameworkConfig, JRoute, JText and JVersion
