@@ -1,9 +1,27 @@
 <?php
+/**
+ * @version		$Id: JEventTest.php 14844 2010-02-13 23:49:28Z ian $
+ * @copyright	Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
 
+/**
+ * Stub class to test JEvent
+ */
 class JEventStub extends JEvent
 {
+	/**
+	 * @var Record of calls made to myEvent
+	 */
 	public $calls = array();
 
+	/**
+	 * Records calls in $calls
+	 *
+	 * Used to verify the firing of events
+	 *
+	 * @return true
+	 */
 	public function myEvent()
 	{
 		$this->calls[] = array('method' => 'myEvent', 'args' => func_get_args());
