@@ -7,6 +7,7 @@
 
 require_once JPATH_BASE.'/libraries/joomla/event/event.php';
 require_once dirname(__FILE__).'/JEventStub.php';
+
 /**
  * Test class for JEvent.
  * Generated by PHPUnit on 2009-10-09 at 14:08:04.
@@ -33,7 +34,7 @@ class JEventTest extends PHPUnit_Framework_TestCase {
 	}
 
 	/**
-	 * tests the firing up the update event with no arguments
+	 * tests the firing of the update event with no arguments
 	 */
 	public function testUpdateNoArgs() {
 		// get a mock for the 
@@ -82,7 +83,7 @@ class JEventTest extends PHPUnit_Framework_TestCase {
 	}
 
 	/**
-	 * tests the firing up the update event with one argument
+	 * tests the firing of the update event with one argument
 	 */
 	public function testUpdateOneArg() {
 		// get a mock for the 
@@ -130,7 +131,7 @@ class JEventTest extends PHPUnit_Framework_TestCase {
 	}
 	
 	/**
-	 * tests the firing up the update event with multiple arguments
+	 * tests the firing of the update event with multiple arguments
 	 */
 	public function testUpdateMultipleArgs() {
 		// get a mock for the 
